--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5354d258-1639-49a3-9f9c-25354edc2a59"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
